welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
  if (isweekend && cigars>=40){
    return true
  }else if(cigars<=60 && cigars>=40){
    return true
  }else{
    return false
  }
}